crates/toon-schema/tests/compile_fail/reserved_tool.stderr
error: field name 'tool' is reserved
       hint: 'tool' is a reserved keyword in the Toon format
 --> tests/compile_fail/reserved_tool.rs:7:5
  |
7 |     tool: String,
  |     ^^^^
